# jpeg-encoder-opencl

./: .gitignore  CMakeLists.txt  LICENSE  README.md  citations.md  clean-build.sh
data/: cds.ppm  csc.ppm  dct.ppm  west_1_without_blue.ppm
report/src/: report.qmd
src/: OpenCLProject_JpegEncoder.cl  OpenCLProject_JpegEncoder.cpp  huffman.hpp  marker.cpp  markers.cpp  markers.hpp  quantization.hpp  utils.cpp  utils.hpp
